# tmp_s4

./: fullsub.opam
_build/: .db  .digest-db  log
_build/default/: .dune-project.swo  dune  fullsub.cma  fullsub.cmxa  fullsub.cmxs  fullsub.dune-package  parser.ml
_build/default/.fullsub.objs/byte/: fullsub.cmi  fullsub.cmo  fullsub.cmt
_build/default/.fullsub.objs/native/: fullsub.cmx
_build/default/.merlin-conf/: exe-main  lib-fullsub
_build/install/default/lib/fullsub/: META  dune-package  opam
